DTL: Se trabajó con el Contexto que viene de Views, además que con los tags for e if y sus aditivos

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -37,6 +37,8 @@
     <hr>
     <p>{{ myText }}</p>
     <p>{{ myNumber }}</p>
+    <p>{{ myBoolean }}</p>
+    <p>{{ myAnotherBoolean }}</p>
     <hr>
     <section>
         <ul>
