DTL: block, include, extends aplicados mediante la creación varios templates para simular la navegación en un Sitio Web

--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,7 +1,8 @@
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/anotherview">AnotherView</a></li>
-        <li><a href="/tmpView">tmpView</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/auth/login">Login</a></li>
+        <li><a href="/auth/signup">SignUp</a></li>
     </ul>
 </nav>
