--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,10 +1,10 @@
 {% extends 'layouts/main-layout.html' %}
 
 {% block title %}
-    <title>TutoEasy</title>
+    <title>Login</title>
 {% endblock %}
 
 {% block content %}
-    <h1>This is a view that I've created :D!</h1>
-    <p>Welcome to TutoEasy!</p>
+    <h1>Login</h1>
+    <p>This is the login template!</p>
 {% endblock %}
