Se configuraron los Archivos Estáticos y se desarrolló una Interfaz agradable para que se pueda diferenciar mejor los Componentes

--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -1,8 +1,8 @@
-<nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/auth/login">Login</a></li>
-        <li><a href="/auth/signup">SignUp</a></li>
+<nav class="navbar">
+    <ul class="navbar__links">
+        <a class="navbar__link" href="/">Home</a>
+        <a class="navbar__link" href="/contact">Contact</a>
+        <a class="navbar__link" href="/auth/login">Login</a>
+        <a class="navbar__link" href="/auth/signup">SignUp</a>
     </ul>
 </nav>
