--- a/src/templates/components/footer.html
+++ b/src/templates/components/footer.html
@@ -1,3 +1,3 @@
-<footer>
-    <p>The following page has a LICENSE</p>
+<footer class="footer">
+    <p class="footer__message">The following page has a LICENSE</p>
 </footer>
