--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -4,5 +4,6 @@
         <a class="navbar__link" href="/contact">Contact</a>
         <a class="navbar__link" href="/auth/login">Login</a>
         <a class="navbar__link" href="/auth/signup">SignUp</a>
+        <a class="navbar__link" href="/filters">Filters</a>
     </ul>
 </nav>
