--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -5,5 +5,6 @@
         <a class="navbar__link" href="/auth/login">Login</a>
         <a class="navbar__link" href="/auth/signup">SignUp</a>
         <a class="navbar__link" href="/filters">Filters</a>
+        <a class="navbar__link" href="/persona">Persona</a>
     </ul>
 </nav>
