Diapositiva 11: Se envió un objeto entero en el contexto y se renderizó en otra vista, obteniendo como resultado que es más cómodo renderizar objetos que tener que pasar contenido por contenido del objeto en cuestión

--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -6,5 +6,6 @@
         <a class="navbar__link" href="/auth/signup">SignUp</a>
         <a class="navbar__link" href="/filters">Filters</a>
         <a class="navbar__link" href="/persona">Persona</a>
+        <a class="navbar__link" href="/personaObject">ORendering</a>
     </ul>
 </nav>
