--- a/src/templates/personas/test.html
+++ b/src/templates/personas/test.html
@@ -5,13 +5,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{ nombre }}</h1>
+    <h1>Renderización de una Persona en partes</h1>
+    <h2>{{ nombre }}</h1>
     <p><b>Edad: </b>{{ edad }}</p>
-    <h2>
+    <h3>
         {% if edad > 40 %}
             debe cuidarse del colesterol
         {% else %}
             puede comer lo que sea
         {% endif %}
-    </h2>
+    </h3>
 {% endblock %}
