Diapositivas 14, 15, 16 y 17: Se desarrolla la clase PersonaForm para que construya el formulario tomando en cuenta el modelo Persona, luego se desarrolla la vista para que renderize o guarde la data de acuerdo al método utilizado, finalmente se mapea con un URL

--- a/src/personas/templates/personas/test.html
+++ b/src/personas/templates/personas/test.html
@@ -1,4 +1,4 @@
-{% extends '../layouts/main-layout.html' %}
+{% extends 'layouts/main-layout.html' %}
 
 {% block title %}
     <title>Test de Personas</title>
