--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -7,5 +7,7 @@
         <a class="navbar__link" href="/filters">Filters</a>
         <a class="navbar__link" href="/persona">Persona</a>
         <a class="navbar__link" href="/personaObject">ORendering</a>
+        <a class="navbar__link" href="/personas/description">Description</a>
+        <a class="navbar__link" href="/agregar">CREATE Persona</a>
     </ul>
 </nav>
