Se realizó el experimento de intentar agregar explícitamente el URL al que se le mandará la solicitud con POST, encontrando así que la forma ideal de colocarlo es /nombre-ruta/

--- a/src/personas/templates/personas/personasCreate.html
+++ b/src/personas/templates/personas/personasCreate.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>CREATE Persona</h1>
-    <form method="POST">
+    <form action="/agregar/" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Grabar">
