Diapositiva 19: Se maquetó un form plano que utiliza el método GET hacia el buscador que tiene la Documentación de Django exitosamente

--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -9,5 +9,6 @@
         <a class="navbar__link" href="/personaObject">ORendering</a>
         <a class="navbar__link" href="/personas/description">Description</a>
         <a class="navbar__link" href="/agregar">CREATE Persona</a>
+        <a class="navbar__link" href="/search">Search!</a>
     </ul>
 </nav>
