Diapositiva 22: Se ha respondido la pregunta teniendo en cuenta el Ejemplo anterior y para lograr dicho cometido he agregado una impresión del método que contiene request y se va visitando la ruta y enviando por el formulario para sacar conclusiones

--- a/src/personas/templates/personas/create.html
+++ b/src/personas/templates/personas/create.html
@@ -20,6 +20,7 @@
     <br>
     <h3>POST</h3>
     <form action="/personas/create" method="POST">
+        {% csrf_token %}
         <input type="text" name="q" placeholder="Search">
         <input type="submit" value="Search">
     </form>
