Django4-Diapositiva2: Probando los Formularios Planos en Django, habilitando todo el proceso de mostrado en el Cliente también y respondiendo las cuestiones en el README.md

--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -4,6 +4,7 @@
         <a class="navbar__link" href="/contact">Contact</a>
         <a class="navbar__link" href="/auth/login">Login</a>
         <a class="navbar__link" href="/auth/signup">SignUp</a>
+        <!--
         <a class="navbar__link" href="/filters">Filters</a>
         <a class="navbar__link" href="/persona">Persona</a>
         <a class="navbar__link" href="/personaObject">ORendering</a>
@@ -11,5 +12,7 @@
         <a class="navbar__link" href="/agregar">CREATE Persona</a>
         <a class="navbar__link" href="/search">Search!</a>
         <a class="navbar__link" href="/personas/create">CREATE Persona 2!</a>
+        -->
+        <a class="navbar__link" href="/anotherAdd">AnotherAdd</a>
     </ul>
 </nav>
