Django4-Diapositiva10: Se probaron los Widgets (Artilugios)

--- a/src/personas/templates/personas/personasAnotherCreateView.html
+++ b/src/personas/templates/personas/personasAnotherCreateView.html
@@ -4,6 +4,12 @@
     <title>RawPersonaForm</title>
 {% endblock %}
 
+{% block styles %}
+    <style>
+        .special {color:#FFF; background-color:peru;}
+    </style>
+{% endblock %}
+
 {% block content %}
     <h1>RawPersonaForm</h1>
     <hr>
