--- a/src/templates/layouts/main-layout.html
+++ b/src/templates/layouts/main-layout.html
@@ -9,6 +9,8 @@
         Here goes your title
     {% endblock %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block styles %}
+    {% endblock %}
     <script src="{% static 'js/index.js' %}"></script>
 </head>
 <body>
