Django4-Diapositiva18: Se implementó la lógica para listar todas las personas, además de enlazarlo con las funcionalidades de ver detalles, editar y eliminar

--- a/src/personas/templates/personas/edit.html
+++ b/src/personas/templates/personas/edit.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>Edit Persona</h1>
-    <form action="/personas/edit/" method="POST">
+    <form action="/personas/{{ idPersona }}/edit/" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Edit">
