--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -15,5 +15,6 @@
         <a class="navbar__link" href="/anotherAdd">AnotherAdd</a>
         <a class="navbar__link" href="/agregar">CREATE Persona</a>
         <a class="navbar__link" href="/personas/edit">Edit Persona</a>
+        <a class="navbar__link" href="/personas">Listing</a>
     </ul>
 </nav>
