Django4-Diapositiva19: Se probaron los Enlaces Dinámicos de URL o URL canónicas de un objeto de modelo, además que se hace un uso interesante del ../

--- a/src/personas/templates/personas/description.html
+++ b/src/personas/templates/personas/description.html
@@ -6,6 +6,7 @@
 
 {% block content %}
     <h2>Persona's Description</h2>
+    <a href="../">Go back to Listing</a>
     <p><b>Nombre Completo: </b>{{ persona.nombres }} {{ persona.apellidos|upper }}</p>
     <p><b>Edad: </b>{{ persona.edad }} -
         {% if persona.edad > 40 %}
