Django4-Diapositiva21: Se ha independizado las rutas de la app personas en su propio archivo que se manda añadir como un router de Express, en adición de hacer cambios a los nombres de las rutas que ya tenía prefijo y dandole un Espacio de Nombres para que sea invocado en el reverse

--- a/src/personas/templates/personas/delete.html
+++ b/src/personas/templates/personas/delete.html
@@ -10,6 +10,6 @@
         <h1>¿Está seguro de querer borrar a esta persona?:</h1>
         <h3>{{ persona.nombres }} {{ persona.apellidos }}</h3>
         <input type="submit" value="Sí">
-        <a href="../">Cancelar</a>
+        <a href="/personas">Cancelar</a>
     </form>
 {% endblock %}
