--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -13,7 +13,7 @@
         <a class="navbar__link" href="/personas/create">CREATE Persona 2!</a>
         -->
         <a class="navbar__link" href="/anotherAdd">AnotherAdd</a>
-        <a class="navbar__link" href="/agregar">CREATE Persona</a>
+        <a class="navbar__link" href="/personas/create">CREATE Persona</a>
         <a class="navbar__link" href="/personas/edit">Edit Persona</a>
         <a class="navbar__link" href="/personas">Listing</a>
     </ul>
