--- a/src/personas/templates/personas/personasCreate.html
+++ b/src/personas/templates/personas/personasCreate.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>CREATE Persona</h1>
-    <form action="/agregar/" method="POST">
+    <form action="/personas/create/" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Grabar">
