--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -11,10 +11,11 @@
         <a class="navbar__link" href="/personas/description">Description</a>
         <a class="navbar__link" href="/search">Search!</a>
         <a class="navbar__link" href="/personas/create">CREATE Persona 2!</a>
-        -->
         <a class="navbar__link" href="/anotherAdd">AnotherAdd</a>
         <a class="navbar__link" href="/personas/create">CREATE Persona</a>
         <a class="navbar__link" href="/personas/edit">Edit Persona</a>
         <a class="navbar__link" href="/personas">Listing</a>
+        -->
+        <a class="navbar__link" href="/estudiantes">Estudiantes</a>
     </ul>
 </nav>
