--- a/src/estudiantes/templates/estudiantes/estudiante_detail.html
+++ b/src/estudiantes/templates/estudiantes/estudiante_detail.html
@@ -6,11 +6,26 @@
 
 {% block styles %}
     <style>
-
+        .go-back {
+            display: inline-block;
+            border-radius: 4px;
+            padding: 0.75rem;
+            font-size: 1.08rem;
+            font-weight: bold;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            text-decoration: none;
+            color: #FFF;
+            background-color: crimson;
+            transition: background 0.3s ease-out;
+        }
+        .go-back:hover {
+            background-color: darkred;
+        }
     </style>
 {% endblock %}
 
 {% block content %}
+    <a class="go-back" href="../">Go back...</a>
     <h1>Detalle del Estudiante</h1>
     <h2>{{ object.fullname }}</h2>
     <p><b>Edad: </b>{{ object.age }} años de edad.</p>
