Django5-Diapositiva9: Se implmementó la funcionalidad de crear un Estudiante con las Vistas basadas en Clases

--- a/src/estudiantes/templates/estudiantes/estudiante_detail.html
+++ b/src/estudiantes/templates/estudiantes/estudiante_detail.html
@@ -31,7 +31,7 @@
     <p><b>Edad: </b>{{ object.age }} años de edad.</p>
     <p><b>Graduado?: </b>
         {% if object.graduated %}
-            <span>Sí, está estudiante PostGrado</span>
+            <span>Sí, está estudiando PostGrado</span>
         {% else %}
             <span>No, aún está en Pregrado</span>
         {% endif %}
