--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -17,5 +17,6 @@
         <a class="navbar__link" href="/personas">Listing</a>
         -->
         <a class="navbar__link" href="/estudiantes">Estudiantes</a>
+        <a class="navbar__link" href="/estudiantes/create">Create Estudiante</a>
     </ul>
 </nav>
