Django5-Diapositiva10: Se implementó la funcionalidad de actualizar un Estudiante utilizando Vistas basadas en Clases

--- a/src/estudiantes/templates/estudiantes/estudiante_detail.html
+++ b/src/estudiantes/templates/estudiantes/estudiante_detail.html
@@ -36,4 +36,7 @@
             <span>No, aún está en Pregrado</span>
         {% endif %}
     </p>
+    <p><b>State: </b>{{ estudiante.state|default:"No declara..." }}</p>
+    <p><b>City: </b>{{ estudiante.city|default:"No declara..." }}</p>
+    <p><b>District: </b>{{ estudiante.district|default:"No declara..." }}</p>
 {% endblock %}
