--- a/src/estudiantes/templates/estudiantes/estudiante_edit.html
+++ b/src/estudiantes/templates/estudiantes/estudiante_edit.html
@@ -1,15 +1,15 @@
 {% extends 'layouts/main-layout.html' %}
 
 {% block title %}
-    <title>Create Estudiante</title>
+    <title>Edit Estudiante</title>
 {% endblock %}
 
 {% block content %}
     <a href="/estudiantes">Cancelar</a>
-    <h2>Create Estudiante</h1>
+    <h2>Edit Estudiante</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Save">
+        <input type="submit" value="Edit">
     </form>
 {% endblock %}
