Django5-Diapositivas[11-12]: Se implementó la funcionalidad de eliminar a un Estudiante haciendo uso de las Vistas basadas en Clases y el reverse_lazy para la redirección en caso sea exitoso la operación

--- a/src/estudiantes/templates/estudiantes/estudiante_list.html
+++ b/src/estudiantes/templates/estudiantes/estudiante_list.html
@@ -29,6 +29,7 @@
                     <a href="{{ estudiante.get_absolute_url }}">{{ estudiante.fullname }}</a>
                 </h3>
                 <a href="{{ estudiante.get_absolute_url }}update">Edit</a>
+                <a href="{{ estudiante.get_absolute_url }}delete">Delete</a>
                 <p><b>CUI: </b>{{ estudiante.cui }}</p>
                 <p><b>Email: </b>{{ estudiante.email }}</p>
                 <p><b>Teléfono: </b>{{ estudiante.phone_number }}</p>
