--- a/src/templates/components/navbar.html
+++ b/src/templates/components/navbar.html
@@ -18,5 +18,6 @@
         -->
         <a class="navbar__link" href="/estudiantes">Estudiantes</a>
         <a class="navbar__link" href="/estudiantes/create">Create Estudiante</a>
+        <a class="navbar__link" href="/estudiantes/query">query</a>
     </ul>
 </nav>
